cluster/apps/default/qnap-proxy/templates/backendtrafficpolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: s3-no-retry
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: s3
  retry:
    numRetries: 0
