cluster/apps/default/qnap-proxy/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: s3
  annotations:
    external-dns.alpha.kubernetes.io/controller: internal
spec:
  parentRefs:
    - name: envoy-internal
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - s3.<secret:private-domain>
  rules:
    - backendRefs:
        - name: s3
          port: 80
